Commit source code for sakai-12.6